--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -1309,6 +1309,26 @@ header .container {
     text-align: center;
 }
 
+.terms-title {
+    max-height: 120px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin-bottom: 20px;
+    color: #CC3E27;
+    font-size: 3em;
+}
+
+.terms-content-title {
+    color: #CC3E27;
+    margin: 5px 0 10px;
+}
+
+.terms-text-soft {
+    margin-right: 20px;
+    text-align: justify;
+    word-wrap: break-word;
+    color: #5a5a5a;
+}
 
 #container {
     position: relative;
