--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -150,7 +150,7 @@
         </div>
         <div class="col-md-8 footer-content">
             <div class="row">
-                <div class="col-md-2 text-center"><a href="#" class="footer-link">Terms & conditions</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'terms_and_conditions' %}" class="footer-link">Terms & conditions</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">Our goals</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">The team</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">Contact</a></div>
