Esbozo de contact

--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -153,7 +153,7 @@
                 <div class="col-md-2 text-center"><a href="{% url 'terms_and_conditions' %}" class="footer-link">Terms & conditions</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">Our goals</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">The team</a></div>
-                <div class="col-md-2 text-center"><a href="#" class="footer-link">Contact</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'contact' %}" class="footer-link">Contact</a></div>
             </div>
         </div>
     </div>
