--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -150,10 +150,10 @@
         </div>
         <div class="col-md-8 footer-content">
             <div class="row">
-                <div class="col-md-2 text-center"><a href="{% url 'terms_and_conditions' %}" class="footer-link">Terms & conditions</a></div>
-                <div class="col-md-2 text-center"><a href="#" class="footer-link">Our goals</a></div>
-                <div class="col-md-2 text-center"><a href="#" class="footer-link">The team</a></div>
-                <div class="col-md-2 text-center"><a href="{% url 'contact' %}" class="footer-link">Contact</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'terms_and_conditions' %}" class="footer-link">{%  trans "Terms & conditions" %}</a></div>
+                <div class="col-md-2 text-center"><a href="#" class="footer-link">{%  trans "Our goals" %}</a></div>
+                <div class="col-md-2 text-center"><a href="#" class="footer-link">{%  trans "The team" %}</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'contact' %}" class="footer-link">{%  trans "Contact" %}</a></div>
             </div>
         </div>
     </div>
