Añadido esbozo de la funcionalidad de recuperación de contraseña.

--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -55,6 +55,7 @@
                     <input class="form-control" type="password" name="password" id="password" placeholder="{% trans "Password" %}"
                            required>
                 </div>
+                <a href="{% url "password_reset_recover" %}">forgot your password, asshole?</a>
                 <button class="btn btn-lg btn-default btn-eathub login-form-submit" type="submit">
                     {% trans "Sign in" %}
                 </button>
