--- a/templates/password_reset/recovery_form.html
+++ b/templates/password_reset/recovery_form.html
@@ -7,7 +7,7 @@
 {% block title %}{% trans "Password recovery" %}{% endblock %}
 
 {% block container %}
-    <div class="panel panel-body main-card pull-left">
+    <div class="panel panel-body col-md-4 col-md-offset-4 text-center">
         <img src="{% static 'webapp/image/logo_key_shaped.png' %}" width="230" height="300">
 	    <form method="post" action="{{ url }}">
 	    	{% csrf_token %}
