--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -107,6 +107,14 @@
     <!--/.nav-collapse -->
 </header>
 <main>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissable col-md-8 col-md-offset-2">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                {% if message.tags %}<strong>{{ message.tags }}</strong>"{% endif %} {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
     <div class="container">
 
         {% block container %}{% endblock %}
