--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -49,7 +49,8 @@
                         <li><a class="" href="#">{% trans "Recipes" %}</a></li>
                         <li><a class="" href="#">{% trans "Explore" %}</a></li>
                         <li><div class="input-group navbar-input-group">
-                        <form class="navbar-form navbar-left" role="search">
+                        <form class="navbar-form navbar-left" role="search" method="post" action="{% url 'search' %}">
+                            {% csrf_token %}
                             <div class="form-group">
                             <input type="text" class="form-control border-search border-rect" placeholder="Search..."
                                    name="srch-term"
