Añadido estilo a la pantalla principal de la recuperacion de contraseña.

--- a/templates/password_reset/recovery_form.html
+++ b/templates/password_reset/recovery_form.html
@@ -7,12 +7,20 @@
 {% block title %}{% trans "Password recovery" %}{% endblock %}
 
 {% block container %}
-    <div class="panel panel-body col-md-4 col-md-offset-4 text-center">
-        <img src="{% static 'webapp/image/logo_key_shaped.png' %}" width="230" height="300">
-	    <form method="post" action="{{ url }}">
-	    	{% csrf_token %}
-	    	{{ form.as_p }}
-	    	<p><input type="submit" class="plus btn btn-default" value="{% trans "Recover my password" %}"></p>
-	    </form>
+    <div class="panel col-md-8 col-md-offset-2 panel-body">
+        <div id="image" class="col-md-4">
+            <img src="{% static 'webapp/image/logo_key_shaped.png' %}" width="230" height="300">
+	    </div>
+        <div id="form" class="col-mf-4 col-md-offset-4 panel-body-password-recovery">
+            <p>
+                {% trans "Forgot your password? Nothing to worry about!" %}<br>
+                {% trans "we can recover it!" %}
+            </p>
+            <form method="post" action="{{ url }}">
+	    	    {% csrf_token %}
+	    	    {{ form.as_p }}
+	    	    <p><input type="submit" class="plus btn btn-default" value="{% trans "Recover my password" %}"></p>
+	        </form>
+        </div>
     </div>
 {% endblock %}
