--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -1332,3 +1332,9 @@ footer {
     bottom: 0;
     overflow: hidden;
 }
+
+/* Style used to center horizontally and vertically password recovery form */
+.panel-body-password-recovery {
+    text-align: center;
+    margin-top: 10%;
+}
