--- a/templates/password_reset/recovery_done.html
+++ b/templates/password_reset/recovery_done.html
@@ -1,10 +1,16 @@
-{% extends "password_reset/base.html" %}{% load i18n %}
-
-{% block title %}{% trans "New password set" %}{% endblock %}
+{% extends "password_reset/base.html" %}
+{% load i18n %}
+{% load staticfiles %}
+{% load tags %}
 
 {% block container %}
-    <div class="panel panel-body main-card pull-left">
-	    <p>{% trans "Your password has successfully been reset. You can use it right now on the login page." %}</p>
-        <a href="{% url 'login' %}">{% trans "Go to the login page." %}</a>
+    <div class="panel col-md-8 col-md-offset-2 panel-body">
+        <div id="image" class="col-md-4">
+            <img src="{% static 'webapp/image/logo_key_shaped.png' %}" width="230" height="300">
+	    </div>
+        <div id="message" class="col-mf-4 col-md-offset-4 panel-body-password-recovery">
+            <p>{% trans "Your password has successfully been reset. You can use it right now on the login page." %}</p>
+            <a href="{% url 'login' %}">{% trans "Go to the login page." %}</a>
+        </div>
     </div>
 {% endblock %}
