--- a/templates/password_reset/recovery_form.html
+++ b/templates/password_reset/recovery_form.html
@@ -14,7 +14,7 @@
         <div id="form" class="col-mf-4 col-md-offset-4 panel-body-password-recovery">
             <p>
                 {% trans "Forgot your password? Nothing to worry about!" %}<br>
-                {% trans "we can recover it!" %}
+                <strong>{% trans "we can recover it!" %}</strong>
             </p>
             <form method="post" action="{{ url }}">
 	    	    {% csrf_token %}
