--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -163,7 +163,7 @@
             <div class="row">
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">Terms & conditions</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">Our goals</a></div>
-                <div class="col-md-2 text-center"><a href="#" class="footer-link">The team</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'ourgroup'%}" class="footer-link">The team</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">Contact</a></div>
             </div>
         </div>
